--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-paramiko==2.7.2
-flake8==3.9.0
-black==20.8b1
-mypy==0.812
+paramiko==2.11.0
+flake8==4.0.1
+black==22.3.0
+mypy==0.961
+pylint==2.14.3
